# rag-app

./: .dockerignore  Dockerfile  basic_functions.py  data.py  embedder.py  main.py  pyproject.toml  retriever.py
.github/workflows/: test.yml
Tests/: test_basic_functions.py  test_generate.py
